--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.2.0"
+    "jsonwebtoken": "^8.5.1",
+    "socket.io": "^4.2.0",
+    "uuid": "^8.3.2"
   }
 }
